# DataEngineeringSeniorProject

./: .env.sample  .gitignore  Makefile  README.md  compose.yml  technical_decisions.md
.github/workflows/: lint.yml
dbt/: Dockerfile  agent_access_reflection.md  dbt_project.yml  entrypoint.sh  pyproject.toml  start_mcp.py
dbt/models-m1/: models.yml
dbt/models-m1/staging/: sources.yml
dbt/models-m1/staging/ecom/: stg_ecom__sales_orders.sql
dbt/models-m1/staging/real_time/: stg_real_time__chat_logs.sql
dbt/models-m1/staging/real_time/base/: base_real_time__sales_orders.sql
dbt/models-m2/staging/web_analytics/: sources.yml  stg_web_analytics.sql  stg_web_analytics.yml
dbt/seeds/: measures.csv  ship_method.csv
dbt/tests/: web_analytics_freshness_check.sql
mcp/: demo_client.py  pyproject.toml
prefect/: agent_log.md  mock_api.py  prd.md  pyproject.toml
prefect/flows/: web_analytics_flow.py
processor/: Dockerfile  main.py  pyproject.toml
processor/etl/: extract.py  load.py
processor/utils/: connections.py  env_loader.py  watermark.py
templates/m2/: agent_log_template.md  agentic_coding_suggestions.md  dbt_cloud_setup.md  prd_template.md  web_analytics_freshness_check.sql
templates/m3/: agent_access_reflection_template.md  demo_client_starter.py  mcp_setup.md  portfolio_readme_template.md  technical_decisions_template.md
