[project]
name = "web-analytics-flow"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "prefect>=2.14,<3.0",
    "snowflake-connector-python>=3.5",
    "requests>=2.31",
    "pandas>=2.1",
    "python-dotenv>=1.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
